--- a/generators/app/templates/app/modules/chat/chat-screen.styles.js.ejs
+++ b/generators/app/templates/app/modules/chat/chat-screen.styles.js.ejs
@@ -26,13 +26,13 @@ export default StyleSheet.create({
   boldLabel: {
     fontWeight: 'bold',
     alignSelf: 'center',
-    color: Colors.snow,
+    color: Colors.white,
     textAlign: 'center',
     marginBottom: Metrics.smallMargin
   },
   label: {
     textAlign: 'center',
-    color: Colors.snow
+    color: Colors.white
   },
   list: {
     flex: 1
