--- a/generators/app/templates/app/modules/home/home-screen.styles.js.ejs
+++ b/generators/app/templates/app/modules/home/home-screen.styles.js.ejs
@@ -10,11 +10,11 @@ export default StyleSheet.create({
   welcomeText: {
     textAlign: 'center',
     fontSize: 20,
-    color: Colors.snow,
+    color: Colors.white,
     fontWeight: '600',
   },
   hairline: {
-    borderBottomColor: Colors.snow,
+    borderBottomColor: Colors.white,
     borderBottomWidth: 1,
     marginHorizontal: 20,
     marginTop: 32,
@@ -46,19 +46,19 @@ export default StyleSheet.create({
   sectionTitle: {
     fontSize: 24,
     fontWeight: '600',
-    color: Colors.snow,
+    color: Colors.white,
   },
   sectionDescription: {
     marginTop: 8,
     fontSize: 18,
     fontWeight: '400',
-    color: Colors.snow,
+    color: Colors.white,
   },
   highlight: {
     fontWeight: '700',
   },
   footer: {
-    color: Colors.snow,
+    color: Colors.white,
     fontSize: 12,
     fontWeight: '600',
     padding: 4,
@@ -79,7 +79,7 @@ export default StyleSheet.create({
   authText: {
     textAlign: 'center',
     fontSize: 18,
-    color: Colors.snow,
+    color: Colors.white,
     fontWeight: '600',
   },
 });
