--- a/generators/app/templates/app/modules/home/learn-more-links.component.js.ejs
+++ b/generators/app/templates/app/modules/home/learn-more-links.component.js.ejs
@@ -107,14 +107,14 @@ const styles = StyleSheet.create({
     flex: 2,
     fontSize: 18,
     fontWeight: '600',
-    color: Colors.snow,
+    color: Colors.white,
   },
   description: {
     flex: 3,
     paddingVertical: 5,
     fontWeight: '400',
     fontSize: 18,
-    color: Colors.snow,
+    color: Colors.white,
   },
   separator: {
     backgroundColor: Colors.light,
