--- a/generators/app/templates/app/shared/components/search-bar/search-bar.js.ejs
+++ b/generators/app/templates/app/shared/components/search-bar/search-bar.js.ejs
@@ -1,41 +1,38 @@
-import React from 'react'
-import PropTypes from 'prop-types'
-import { View, Text, TextInput, TouchableOpacity } from 'react-native'
+import React from 'react';
+import { View, Text, TextInput, TouchableOpacity, useWindowDimensions } from 'react-native';
 import { Ionicons } from '@expo/vector-icons';
 
-import styles from './search-bar.styles'
-import { Colors, Metrics } from '../../themes'
+import styles from './search-bar.styles';
+import { Colors, Metrics } from '../../themes';
 
-export default class SearchBar extends React.Component {
-  static propTypes = {
-    onSearch: PropTypes.func.isRequired,
-    onCancel: PropTypes.func.isRequired,
-    searchTerm: PropTypes.string
-  }
-
-  render () {
-    const { onSearch, onCancel, searchTerm } = this.props
-    return (
-      <View style={styles.container}>
-        <Ionicons name="md-search" size={Metrics.icons.tiny} style={styles.searchIcon} />
-        <TextInput
-          placeholder='Search'
-          placeholderTextColor={Colors.snow}
-          underlineColorAndroid='transparent'
-          style={styles.searchInput}
-          value={searchTerm}
-          onChangeText={onSearch}
-          autoCapitalize='none'
-          onSubmitEditing={onSearch.bind(this, searchTerm)}
-          returnKeyType={'search'}
-          autoCorrect={false}
-          selectionColor={Colors.snow}
-          testID='searchTextInput'
-        />
-        <TouchableOpacity onPress={onCancel} style={styles.cancelButton}>
-          <Text style={styles.buttonLabel}>Cancel</Text>
-        </TouchableOpacity>
-      </View>
-    )
-  }
+export default function SearchBar(props) {
+  // static propTypes = {
+  //   onSearch: PropTypes.func.isRequired,
+  //   onCancel: PropTypes.func.isRequired,
+  //   searchTerm: PropTypes.string,
+  // };
+  const { onSearch, onCancel, searchTerm } = props;
+  const dimensions = useWindowDimensions();
+  return (
+    <View style={[styles.container, { width: dimensions.width - Metrics.baseMargin }]}>
+      <Ionicons name="md-search" size={Metrics.icons.tiny} style={styles.searchIcon} />
+      <TextInput
+        placeholder="Search"
+        placeholderTextColor={Colors.white}
+        underlineColorAndroid="transparent"
+        style={styles.searchInput}
+        value={searchTerm}
+        onChangeText={onSearch}
+        autoCapitalize="none"
+        onSubmitEditing={onSearch.bind(this, searchTerm)}
+        returnKeyType={'search'}
+        autoCorrect={false}
+        selectionColor={Colors.white}
+        testID="searchTextInput"
+      />
+      <TouchableOpacity onPress={onCancel} style={styles.cancelButton}>
+        <Text style={styles.buttonLabel}>Cancel</Text>
+      </TouchableOpacity>
+    </View>
+  );
 }
