--- a/generators/app/templates/app/shared/components/search-bar/search-bar.styles.js.ejs
+++ b/generators/app/templates/app/shared/components/search-bar/search-bar.styles.js.ejs
@@ -7,11 +7,10 @@ export default StyleSheet.create({
     marginTop: Metrics.smallMargin,
     backgroundColor: Colors.transparent,
     flexDirection: 'row',
-    width: Metrics.screenWidth - Metrics.baseMargin
   },
   searchInput: {
     flex: 5,
-    height: Metrics.searchBarHeight,
+    height: 30,
     alignSelf: 'center',
     padding: Metrics.smallMargin,
     textAlign: 'left',
@@ -19,15 +18,15 @@ export default StyleSheet.create({
     fontSize: Fonts.size.instructions,
     borderRadius: 5,
     borderWidth: 1,
-    borderColor: Colors.snow,
+    borderColor: Colors.black,
     paddingLeft: 30,
-    color: Colors.snow,
+    color: Colors.black,
     flexDirection: 'row'
   },
   searchIcon: {
     left: Metrics.doubleBaseMargin,
     alignSelf: 'center',
-    color: Colors.snow,
+    color: Colors.black,
     backgroundColor: Colors.transparent
   },
   cancelButton: {
@@ -36,7 +35,7 @@ export default StyleSheet.create({
     marginHorizontal: Metrics.baseMargin
   },
   buttonLabel: {
-    color: Colors.snow,
+    color: Colors.black,
     fontFamily: Fonts.type.base,
     fontSize: Fonts.size.regular
   }
