--- a/generators/app/templates/app/shared/themes/application.styles.js.ejs
+++ b/generators/app/templates/app/shared/themes/application.styles.js.ejs
@@ -19,12 +19,12 @@ const ApplicationStyles = {
     sectionText: {
       ...Fonts.style.normal,
       paddingVertical: Metrics.doubleBaseMargin,
-      color: Colors.snow,
+      color: Colors.white,
       marginVertical: Metrics.smallMargin,
       textAlign: 'center',
     },
     subtitle: {
-      color: Colors.snow,
+      color: Colors.white,
       padding: Metrics.smallMargin,
       marginBottom: Metrics.smallMargin,
       marginHorizontal: Metrics.smallMargin,
@@ -64,7 +64,7 @@ const ApplicationStyles = {
     },
     darkLabel: {
       fontWeight: 'bold',
-      color: Colors.snow,
+      color: Colors.white,
     },
     label: {
       fontWeight: 'bold',
