--- a/generators/app/templates/app/shared/themes/colors.js.ejs
+++ b/generators/app/templates/app/shared/themes/colors.js.ejs
@@ -1,9 +1,9 @@
 const colors = {
   jhipsterBlue: '#3E8ACC',
   transparent: 'rgba(0,0,0,0)',
-  steel: '#CCCCCC',
   error: 'rgba(200, 0, 0, 0.8)',
-  snow: 'white',
+  white: 'white',
+  black: 'black',
   text: '#E0D7E5',
 };
 
