--- a/generators/app/templates/e2e/account/change-password-screen.spec.js.ejs
+++ b/generators/app/templates/e2e/account/change-password-screen.spec.js.ejs
@@ -32,7 +32,7 @@ describe('Change Password Screen Tests', () => {
     await element(by.id('changePasswordSubmitButton')).tap();
   };
 
-  it('should display a popup on change password success', async () => {
+  it('should display a success message on change password success', async () => {
     const expectedLabel = 'Password changed';
     await changePassword(password, newPassword);
     await Utils.waitForElementToBeVisibleByLabel(expectedLabel);
@@ -42,7 +42,7 @@ describe('Change Password Screen Tests', () => {
     await expect(element(by.label(expectedLabel))).toBeVisible();
   });
 
-  it('should display a popup on change password failure', async () => {
+  it('should display an error message on change password failure', async () => {
     const expectedLabel = 'Incorrect password';
     await changePassword('invalid-password', 'invalid-password');
     await Utils.waitForElementToBeVisibleByLabel(expectedLabel);
