--- a/generators/app/templates/e2e/utils.js.ejs
+++ b/generators/app/templates/e2e/utils.js.ejs
@@ -76,7 +76,7 @@ const waitForElementToBeVisibleById = async (elementId, timeout = 3000) => {
 }
 
 const waitForSplashScreen = async () => {
-  await waitForElementToBeVisibleById('launchScreen')
+  await waitForElementToBeVisibleById('homeScreen')
 };
 
 const reloadApp = async () => {
