--- a/generators/app/templates/app/shared/components/alert-message/alert-message.styles.js.ejs
+++ b/generators/app/templates/app/shared/components/alert-message/alert-message.styles.js.ejs
@@ -18,9 +18,9 @@ export default StyleSheet.create({
     fontFamily: Fonts.type.base,
     fontSize: Fonts.size.regular,
     fontWeight: 'bold',
-    color: Colors.steel
+    color: Colors.black
   },
   icon: {
-    color: Colors.steel
+    color: Colors.black
   }
 })
