--- a/generators/app/templates/app/shared/components/rounded-button/rounded-button.styles.js.ejs
+++ b/generators/app/templates/app/shared/components/rounded-button/rounded-button.styles.js.ejs
@@ -12,7 +12,7 @@ export default StyleSheet.create({
     justifyContent: 'center'
   },
   buttonText: {
-    color: Colors.snow,
+    color: Colors.white,
     textAlign: 'center',
     fontWeight: 'bold',
     fontSize: Fonts.size.medium,
