--- a/generators/entity/templates/entity-edit-screen.js.ejs
+++ b/generators/entity/templates/entity-edit-screen.js.ejs
@@ -178,7 +178,7 @@ const onSubmit = (data) => update<%= context.entityNameCapitalized %>(formValueT
                 <%- formField %>
           <%_ }) _%>
             <%_ context.relationships.filter(relation => relation.ownerSide).forEach((relation, index) => { _%>
-              <%_ const formField = context.getRelationshipFormField(relation, index, context.relationships.filter(relation => relation.ownerSide).length, context); _%>
+              <%_ const formField = context.getRelationshipFormField(relation); _%>
               <%- formField %>
             <%_ }) _%>
 
