update oauth docs and add some build/deploy instructions

--- a/generators/app/templates/app/modules/login/login-screen.oauth2.js.ejs
+++ b/generators/app/templates/app/modules/login/login-screen.oauth2.js.ejs
@@ -8,7 +8,7 @@ import { useDidUpdateEffect } from '../../shared/util/use-did-update-effect';
 import styles from './login-screen.styles';
 
 function LoginScreen(props) {
-  const { navigation, account, fetching, error, attemptLogin } = props;
+  const { navigation, account, fetching, error, attemptLogin, fetchingAccount } = props;
   // setup error state for displaying error messages
   const [loginError, setLoginError] = React.useState('');
 
@@ -29,7 +29,7 @@ function LoginScreen(props) {
   return (
     <KeyboardAwareScrollView contentContainerStyle={styles.container} keyboardShouldPersistTaps="handled" keyboardDismissMode="on-drag">
         <Text style={styles.errorText}>{loginError}</Text>
-        <Button title={'Login'} onPress={attemptLogin} />
+        <Button title={'Login'} onPress={attemptLogin} disabled={fetchingAccount} />
     </KeyboardAwareScrollView>
   );
 }
@@ -37,6 +37,7 @@ function LoginScreen(props) {
 const mapStateToProps = (state) => {
   return {
     account: state.account.account,
+    fetchingAccount: state.account.fetching,
     fetching: state.login.fetching,
     error: state.login.error,
   };
