--- a/generators/app/templates/app/shared/services/api.js.ejs
+++ b/generators/app/templates/app/shared/services/api.js.ejs
@@ -39,7 +39,8 @@ const create = (baseURL = AppConfig.apiUrl) => {
   const setAuthToken = (userAuth) => api.setHeader('Authorization', 'Bearer ' + userAuth)
   const removeAuthToken = () => api.deleteHeader('Authorization')
   <%_ if (context.authenticationType === 'oauth2') { _%>
-  const getOauthInfo = () => api.get('api/auth-info')
+  // use an empty Authorization header in the auth-info request to prevent an invalid token from returning 401
+  const getOauthInfo = () => api.get('api/auth-info', {}, { headers: {} });
   const getOauthIssuerInfo = (issuerUrl) => api.get(`${issuerUrl}/.well-known/openid-configuration`)
   <%_ } else if (context.authenticationType === 'jwt') { _%>
   const login = (userAuth) => api.post('api/authenticate', userAuth)
